--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,13 @@
 <app-navbar></app-navbar>
 
-<p>home works!</p>
+<div class="container">
+
+    <div class="card" style="width:400px" *ngFor="let employee of employees">
+      <img class="card-img-top" style="max-height: 200px;" src="{{employee.image}}" alt="Card image" style="width:100%">
+      <div class="card-body">
+        <h4 class="card-title">{{employee.name}}</h4>
+        <p class="card-text">{{employee.description}}</p>
+      </div>
+    </div>
+   
+</div>
