--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-default">
+<!-- <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">WebSiteName</a>
+        <a class="navbar-brand" href="#">WebSiteName {{current_link}}</a>
       </div>
       <ul class="nav navbar-nav">
         <li [ngClass]="activeMenu == 'home' ? 'active' : ''">
@@ -9,9 +9,46 @@
         <li [ngClass]="activeMenu == 'contact' ? 'active' : ''"> 
           <a href="#" (click)="setActive('contact')" routerLink="/contact">Contact</a>
         </li>
-        
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
       </ul>
     </div>
-  </nav>
+</nav> -->
+<!-- above is the navbar active deactive using localStorage -->
+
+
+<!-- <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li [ngClass]="current_link == '/' ? 'active' : ''">
+        <a href="#" routerLink="/">Home</a></li>
+      <li [ngClass]="current_link == '/contact' ? 'active' : ''"> 
+        <a href="#" routerLink="/contact">Contact</a>
+      </li>
+      <li [ngClass]="current_link == '/about' ? 'active' : ''"> 
+        <a href="#" routerLink="/about">About</a>
+      </li>
+    </ul>
+  </div>
+</nav> -->
+
+<!-- Above is bootstrap3 navbar -->
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <!-- Brand/logo -->
+  <a class="navbar-brand" href="#">Logo</a>
+  
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li [ngClass]="current_link == '/' ? 'nav-item active' : 'nav-item'" >
+      <a class="nav-link" href="#" routerLink="/">Home</a>
+    </li>
+    <li [ngClass]="current_link == '/contact' ? 'nav-item active' : 'nav-item'" >
+      <a class="nav-link" href="#" routerLink="/contact">Contact</a>
+    </li>
+    <li [ngClass]="current_link == '/about' ? 'nav-item active' : 'nav-item'" >
+      <a class="nav-link" href="#" routerLink="/about">About</a>
+    </li>
+  </ul>
+</nav>
